# doctranslate

./: .dockerignore  .gitignore  404.html  API.md  CHANGELOG.md  Dockerfile  FORK_IMPLEMENTATION_GUIDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE.ADDITIONS  NOTICE  QUICK_START.sh  README.md  deploy.sh  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  installation.yaml
.github/PULL_REQUEST_TEMPLATE/: pr_form.yml
.github/workflows/: bandit.yml  docker.yml  docs-pr.yml  docs.yml  perf-nightly.yml  perf-pr.yml  publish-to-pypi.yml  test.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
CONTRIBUTOR_REWARD/: index.html
ImplementationDetails/: index.html
ai/: index.html
ai/cli-vnext-baseline/: index.html
ai/mcp-suggestions/: index.html
ai/package-layers/: index.html
benchmarks/: index.html
clients/http-python/: README.md  openapi-generator.yaml  pyproject.toml
clients/http-python/doc_translater_http_api_client/: __init__.py  convenience.py
clients/http-python/doc_translater_http_api_client/api/assets/: v1_assets_warmup_post.py
clients/http-python/doc_translater_http_api_client/api/config/: v1_config_validate_post.py
clients/http-python/doc_translater_http_api_client/api/health/: v1_assets_status_get.py  v1_health_live_get.py  v1_health_ready_get.py  v1_runtime_get.py
clients/http-python/doc_translater_http_api_client/api/inspect/: v1_inspect_post.py
clients/http-python/doc_translater_http_api_client/api/jobs/: v1_jobs_artifact_get.py  v1_jobs_artifact_head.py  v1_jobs_cancel.py  v1_jobs_create_json.py  v1_jobs_create_multipart.py  v1_jobs_events_list.py  v1_jobs_get.py  v1_jobs_manifest_get.py  v1_jobs_result_get.py  v1_jobs_stream.py
clients/http-python/doc_translater_http_api_client/models/: __init__.py  api_error_envelope.py  artifact_descriptor.py  artifact_kind.py  artifact_link.py  artifact_manifest.py  asset_file_status.py  asset_status_response.py  body_v1_jobs_create_multipart.py  config_validate_request.py  config_validate_response.py  glossary_entry_spec.py  glossary_spec.py  health_live_response.py  health_ready_response.py  health_ready_response_checks.py  input_file_inspection.py  input_inspection_result.py  inspect_request.py  job_create_json_body.py  job_create_response.py  job_create_response_kind.py  job_create_response_state.py  job_event_item.py  job_events_response.py  job_manifest_item.py  job_manifest_response.py  job_manifest_response_kind.py  job_manifest_response_state.py  job_result_response.py  job_result_response_kind.py  job_result_response_state.py  job_status_response.py  job_status_response_kind.py  job_status_response_state.py  open_ai_request_args.py  progress_end_event.py  progress_start_event.py  progress_update_event.py  public_error_code.py  (+24 more)
configuration/: index.html
deploy-cloud-run/: index.html
deploy-fargate-app-runner/: index.html
deploy-modal-runpod/: index.html
deploy-samples/: index.html
docker/: README-profiles.md  entrypoint.sh  index.html
docker-profiles/: index.html
docs/: CONTRIBUTING.md  CONTRIBUTOR_REWARD.md  benchmarks.md  configuration.md  deploy-cloud-run.md  deploy-fargate-app-runner.md  deploy-modal-runpod.md  docker-profiles.md  docker.md  github-pages.md  http-api-python-client.md  http-api-storage-backends.md  http-api-workers.md  http-api.md  il-spec-notes.md  index.md  library-api.md  local-translation.md  migration.md  multi-translator.md  observability.md  public-api-policy.md  serverless-containers.md  serverless-runtime-reference.md  supported_languages.md  translation-memory.md  troubleshooting.md
doctranslate/: api.py  bootstrap.py  const.py  exceptions.py  glossary.py  main.py  progress_monitor.py
github-pages/: index.html
http-api/: index.html
http-api-python-client/: index.html
http-api-storage-backends/: index.html
http-api-workers/: index.html
il-spec-notes/: index.html
intro-to-pdf-object/: index.html
library-api/: index.html
local-translation/: index.html
migration/: index.html
multi-translator/: index.html
observability/: index.html
openapi/: README.md
public-api-policy/: index.html
scripts/: bench_local_translation.py  check_cli_import_time.py  ensure_http_client_packaging.py  export_openapi.py  perf_docker_metrics.py  perf_meso.py  regenerate_http_client.py
search/: search_index.json
serverless-containers/: index.html
serverless-runtime-reference/: index.html
supported_languages/: index.html
tests/: conftest.py  test_cli_json_contract.py  test_cli_vnext.py  test_http_api_auth.py  test_http_api_generated_client.py  test_http_api_health.py  test_http_api_job_events.py  test_http_api_jobs.py  test_http_api_metadata_sqlite.py  test_http_api_migrate_metadata.py  test_http_api_models.py  test_http_api_smoke_pdf.py  test_http_api_sqlite_queue_counters.py  test_il_regression_ocr_density.py  test_install_profiles.py  test_llm_schemas.py  test_llm_usage.py  test_local_cache_fingerprint.py  test_local_provider_ollama.py  test_local_translation_config.py  test_main_cli_translation_config.py  test_observability_http_api.py  test_observability_redaction.py  test_ocr_merge_logic.py  test_ocr_page_selector.py  test_ocr_routing_policy.py  test_pdf_smoke.py  test_public_api_contract.py  test_public_schema_compat.py  test_public_schema_serialization.py  test_range_requests.py  test_redis_settings.py  test_translation_cache_cleanup.py  test_translation_memory_concurrency.py  test_translation_memory_lookup.py  test_translation_memory_migration.py  test_translation_memory_safety.py  test_translation_settings.py  test_translator_config.py  test_translator_provider_litellm.py  (+2 more)
translation-memory/: index.html
troubleshooting/: index.html
workers/edge-api/: .dev.vars.example  ARCHITECTURE.md  PYODIDE_IMPORTS.md  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
workers/edge-api/src/: forwarding.py  worker.py
workers/edge-api/tests/: test_schema_and_forwarding.py
(+211 files in other folders)
