[project]
name = "DocTranslater"
version = "0.6.0"
description = "DocTranslater — PDF translation with layout preservation and multi-provider LLM routing"
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "awwaawwa", email = "aw@funstory.ai" }
]
maintainers = [
    { name = "awwaawwa", email = "aw@funstory.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["PDF"]
# Minimal install: config/TOML types and glossary CSV normalization (`regex`).
# For CLI translation and PDF pipeline, install ``DocTranslater[full]`` (see README).
dependencies = [
    "charset-normalizer>=2.0.0",
    "chardet>=5.2.0",
    "pydantic>=2.10.6",
    "regex>=2024.11.6",
    "toml>=0.10.2",
]

[project.optional-dependencies]
# Empty on purpose: documented alias for ``pip install "DocTranslater[schemas]"`` (same as base).
schemas = []
pdf = [
    "bitstring>=4.3.0",
    "cryptography>=36.0.0",
    "freetype-py>=2.5.1",
    "msgpack>=1.1.0",
    "numpy>=2.0.2",
    "orjson>=3.10.14",
    "pymupdf>=1.25.1",
    "pyzstd>=0.17.0",
    "rtree>=1.4.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "xsdata[cli,lxml,soap]>=24.12",
]
llm = [
    "httpx[socks]>=0.27.0",
    "litellm>=1.55.0",
    "openai>=1.59.3",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
]
vision = [
    "huggingface-hub>=0.27.0",
    "onnx>=1.18.0",
    "onnxruntime>=1.16.1,<1.24; python_version < '3.11'",
    "onnxruntime>=1.16.1; python_version >= '3.11'",
    "opencv-python-headless>=4.10.0.84",
]
ocr = [
    "rapidocr-onnxruntime>=1.4.4",
]
tm = [
    "Levenshtein>=0.27.1",
    "peewee>=3.17.8",
    "rapidfuzz>=3.9.0",
]
glossary = [
    "hyperscan>=0.7.13",
]
cli = [
    "psutil>=7.0.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
full = [
    "bitstring>=4.3.0",
    "cryptography>=36.0.0",
    "freetype-py>=2.5.1",
    "huggingface-hub>=0.27.0",
    "httpx[socks]>=0.27.0",
    "hyperscan>=0.7.13",
    "Levenshtein>=0.27.1",
    "litellm>=1.55.0",
    "msgpack>=1.1.0",
    "numpy>=2.0.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.16.1,<1.24; python_version < '3.11'",
    "onnxruntime>=1.16.1; python_version >= '3.11'",
    "openai>=1.59.3",
    "opencv-python-headless>=4.10.0.84",
    "orjson>=3.10.14",
    "peewee>=3.17.8",
    "psutil>=7.0.0",
    "pymupdf>=1.25.1",
    "pyzstd>=0.17.0",
    "rapidfuzz>=3.9.0",
    "rapidocr-onnxruntime>=1.4.4",
    "rich>=13.9.4",
    "rtree>=1.4.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "xsdata[cli,lxml,soap]>=24.12",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
]
directml = [
    "onnxruntime-directml>=1.16.1,<1.24; python_version < '3.11'",
    "onnxruntime-directml>=1.16.1; python_version >= '3.11'",
]
cuda = [
    "onnxruntime-gpu>=1.16.1,<1.24; python_version < '3.11'",
    "onnxruntime-gpu>=1.16.1; python_version >= '3.11'",
]
memray = ["memray>=1.17.1"]
tm_semantic = [
    "sentence-transformers>=3.3.0",
    "torch>=2.2.0",
]
api = [
    "arq>=0.26.0",
    "fastapi>=0.115.0",
    "fsspec>=2024.2.0",
    "httpx[socks]>=0.27.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]
api-s3 = [
    "s3fs>=2024.2.0",
    "boto3>=1.34.0",
]
api-gcs = [
    "gcsfs>=2024.2.0",
]

[project.urls]
Homepage = "https://github.com/miguelenes/doctranslate"
Documentation = "https://miguelenes.github.io/doctranslate/"
Issues = "https://github.com/miguelenes/doctranslate/issues"

[project.scripts]
doctranslate = "doctranslate.main:cli"
doc-translate = "doctranslate.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doctranslate"]

[tool.uv]
# ORT 1.24+ has no cp310 wheels; apply to the full graph (transitive deps too).
constraint-dependencies = ["onnxruntime<1.24; python_version < '3.11'"]

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741", "E501"]
max-line-length = 88

[tool.ruff]
src = [
    "clients/http-python/doc_translater_http_api_client",
    "doctranslate",
    "tests",
]
target-version = "py310"
show-fixes = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "E203",   # 冒号前的空格
    "E261",   # 注释前至少两个空格
    "E501",   # 行太长
    "E741",   # 变量名歧义
    "F841",   # 未使用的变量
    "C901",   # 太复杂的函数
    "S101",   # use assert
    "SIM",    # flake8-simplify
    "ARG002", # unused argument
    "S110",   # `try`-`except`-`pass` detected, consider logging the exception
    "B024",   # abstract class without abstract methods
    "S112",   # `try`-`except`-`continue` detected, consider logging the exception
    "COM812", # missing-trailing-comma

]
select = [
    "E",   # pycodestyle 错误
    "F",   # Pyflakes
    "N",   # PEP8 命名
    "B",   # flake8-bugbear
    "I",   # isort
    "C",   # mccabe
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "ARG", # flake8-unused-arguments
    "PTH", # 使用 pathlib
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# 设置一些规则的特定配置
[tool.ruff.lint.mccabe]
max-complexity = 10 # 函数圈复杂度阈值

[tool.ruff.lint.per-file-ignores]
"doctranslate/format/pdf/pdfinterp.py" = ["N"] # 忽略命名规范
"tests/*" = ["S101", "S105"]    # 在测试文件中允许 assert / 示例凭据字符串
"**/__init__.py" = ["F401"]     # 允许未使用的导入
# 忽略 S311 警告，因为这是有意的
"doctranslate/format/pdf/document_il/midend/paragraph_finder.py" = ["S311"]
"docs/*" = ["A001"]
"doctranslate/pdfminer/*" =["A","F", "I", "N", "S", "B", "C", "COM", "ARG", "PTH", "UP"]
"doctranslate/http_api/worker/arq_worker.py" = ["ARG001"]
"scripts/regenerate_http_client.py" = ["S603"]
[dependency-groups]
dev = [
    "arq>=0.26.0",
    "fastapi>=0.115.0",
    "fsspec>=2024.2.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
    "bumpver>=2024.1130",
    "markdown-callouts>=0.4.0",
    "markdown-include>=0.8.1",
    "mkdocs-git-authors-plugin>=0.9.2",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs>=1.5,<2",
    "mkdocs-material[recommended]>=9.7.5",
    "pre-commit>=4.1.0",
    "pygments>=2.19.1",
    "ruff>=0.9.2",
    "pytest>=8.3.4",
    "pylance>=0.29.0",
    "py-spy>=0.4.0",
    "zensical>=0.0.33",
    "openapi-python-client>=0.28.3",
]

[tool.pytest.ini_options]
pythonpath = [".", "src", "clients/http-python"]
testpaths = ["tests"]
markers = [
    "requires_pdf: needs PDF/IL stack (pymupdf, xsdata, …)",
    "requires_llm: needs OpenAI/httpx/LiteLLM stack",
    "requires_ocr: needs RapidOCR / ONNX OCR path",
    "requires_hyperscan: needs hyperscan (glossary acceleration)",
    "requires_semantic_tm: needs sentence-transformers / torch",
    "requires_full: needs the ``full`` optional dependency set (default CI)",
]

[bumpver]
current_version = "0.6.0"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"doctranslate/__init__.py" = [
    '__version__ = "{version}"'
]
"doctranslate/main.py" = [
    '__version__ = "{version}"'
]
"doctranslate/const.py" = [
    '__version__ = "{version}"'
]

[tool.pyright]
pythonVersion = "3.10"
# typeCheckingMode = "off"
reportGeneralTypeIssues = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportUnknownParameterType = false
